--- a/_config.yml
+++ b/_config.yml
@@ -18,11 +18,11 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Thomas Prince
+title: Home Page
 email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
   A simple site about me (Thomas Prince) - who I am, what I do, and I do it.
-  This is my first static website I've developed. Just for fun really :)
+  \nThis is my first static website I've developed. Just for fun really :)
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: tommy-pea
