--- a/_config.yml
+++ b/_config.yml
@@ -18,20 +18,25 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Home Page
+title: Thomas Prince
 email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
   A simple site about me (Thomas Prince) - who I am, what I do, and I do it.
-  \nThis is my first static website I've developed. Just for fun really :)
+  This is my first static website I've developed. Just for fun really :)
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: tommy-pea
+#twitter_username: tommy-pea
 github_username:  tommy-pea
 
 # Build settings
 theme: minima
 plugins:
   - jekyll-feed
+
+header_pages:
+  - about.md
+  - engineering.md
+  - music.md
 
 # Exclude from processing.
 # The following items will not be processed, by default.
