--- a/_config.yml
+++ b/_config.yml
@@ -29,14 +29,33 @@ url: "https://tommy-pea.me" # the base hostname & protocol for your site, e.g. h
 github_username:  tommy-pea
 
 # Build settings
-theme: minima
+theme: minimal-mistakes-jekyll
 plugins:
   - jekyll-feed
+  - jekyll-include-cache
+minimal_mistakes_skin: air #"default", "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
-header_pages:
-  - about.md
-  - engineering.md
-  - music.md
+breadcrumbs: true
+
+include: ["_pages"]
+defaults:
+  # _posts
+  - scope:
+      path: ""
+      type: pages
+    values:
+      layout: single
+      author_profile: true
+  - scope:
+      path: ""
+      type: posts
+    values:
+      layout: single
+      read_time: true
+      author_profile: true
+      comments: true
+      share: true
+      related: true
 
 # Exclude from processing.
 # The following items will not be processed, by default.
