remote theme attempt

--- a/_config.yml
+++ b/_config.yml
@@ -30,16 +30,17 @@ github_username:  tommy-pea
 
 # Build settings
 theme: minimal-mistakes-jekyll
+remote_theme: benbalter/retlab
 plugins:
   - jekyll-feed
   - jekyll-include-cache
+  - jekyll-remote-theme
 minimal_mistakes_skin: air #"default", "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
 breadcrumbs: true
 
-include: ["_pages"]
+include: ["_pages", "_posts"]
 defaults:
-  # _posts
   - scope:
       path: ""
       type: pages
