--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ url: "https://tommy-pea.me" # the base hostname & protocol for your site, e.g. h
 github_username:  tommy-pea
 
 # Build settings
-theme: minimal-mistakes-jekyll
+#theme: minimal-mistakes-jekyll
 remote_theme: benbalter/retlab
 plugins:
   - jekyll-feed
