--- a/_config.yml
+++ b/_config.yml
@@ -63,6 +63,13 @@ defaults:
       share: true
       related: true
 
+author:
+  name: Thomas Prince
+  avatar: assets/images/headshot.png
+  bio: An engineer and musician.
+  location: London, UK
+
+
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
