--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ description: >- # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://tommy-pea.me" # the base hostname & protocol for your site, e.g. http://example.com
 #twitter_username: tommy-pea
-github_username:  tommy-pea
+github_username: tommy-pea
 
 # Build settings
 #theme: minimal-mistakes-jekyll
@@ -42,7 +42,7 @@ remote_theme: mmistakes/minimal-mistakes
 
 #minimal_mistakes_skin: air #"default", "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
-breadcrumbs: true
+breadcrumbs: false
 
 include: ["_pages", "_pages_engineering"]
 defaults:
