--- a/_config.yml
+++ b/_config.yml
@@ -59,7 +59,7 @@ author:
   name: Thomas Prince
   avatar: assets/images/headshot.png
   bio: An engineer and musician.
-  location: London, UK
+  location: Nelson, NZ
 
 
 # Exclude from processing.
